feat: i18n for Login and Dashboard pages
- Login page: full 17-language selector dropdown, all text translatable
- Dashboard page: 45+ translation keys for stats, actions, deadlines
- All language files updated with auth/login/dashboard translations
- Hindi has native translations, others have English fallback

--- a/client/public/locales/as/common.json
+++ b/client/public/locales/as/common.json
@@ -60,10 +60,12 @@
     "type": "প্ৰকাৰ",
     "email": "ইমেইল",
     "phone": "ফোন",
-    "address": "ঠিকনা"
+    "address": "ঠিকনা",
+    "viewAll": "View all",
+    "createTicket": "Create a ticket"
   },
   "auth": {
-    "login": "লগ ইন",
+    "login": "ছাইন ইন",
     "logout": "লগ আউট",
     "email": "ইমেইল ঠিকনা",
     "password": "পাছৱৰ্ড",
@@ -71,23 +73,23 @@
     "forgotPassword": "পাছৱৰ্ড পাহৰিলে?",
     "noAccount": "একাউণ্ট নাই?",
     "signUp": "ছাইন আপ",
-    "signingIn": "Signing in...",
-    "welcome": "Welcome back!",
-    "demoCredentials": "Demo Credentials",
-    "firstTimeLogin": "First time? Use PIN",
-    "usePassword": "Use Password",
-    "pin": "6-Digit PIN",
-    "verifyPin": "Verify PIN",
-    "setPassword": "Set Password",
-    "confirmPassword": "Confirm Password",
-    "verifying": "Verifying...",
-    "settingUp": "Setting up...",
-    "setPasswordLogin": "Set Password & Login",
-    "enterPinFromTeacher": "Enter PIN from your teacher",
-    "academicSession": "Academic Session",
-    "noSessions": "No sessions",
-    "current": "Current",
-    "pinVerified": "PIN verified! Set your password."
+    "signingIn": "ছাইন ইন হৈ আছে...",
+    "welcome": "পুনৰ স্বাগতম!",
+    "demoCredentials": "ডেমো প্ৰমাণপত্ৰ",
+    "firstTimeLogin": "প্ৰথমবাৰ? PIN ব্যৱহাৰ কৰক",
+    "usePassword": "পাছৱৰ্ড ব্যৱহাৰ কৰক",
+    "pin": "6-সংখ্যাৰ PIN",
+    "verifyPin": "PIN যাচাই কৰক",
+    "setPassword": "পাছৱৰ্ড ছেট কৰক",
+    "confirmPassword": "পাছৱৰ্ড নিশ্চিত কৰক",
+    "verifying": "যাচাই হৈ আছে...",
+    "settingUp": "ছেট আপ হৈ আছে...",
+    "setPasswordLogin": "পাছৱৰ্ড ছেট কৰক আৰু লগইন কৰক",
+    "enterPinFromTeacher": "শিক্ষকৰ পৰা পোৱা PIN দিয়ক",
+    "academicSession": "শিক্ষাবৰ্ষ",
+    "noSessions": "কোনো সেছন নাই",
+    "current": "বৰ্তমান",
+    "pinVerified": "PIN যাচাই হ'ল! আপোনাৰ পাছৱৰ্ড ছেট কৰক।"
   },
   "language": {
     "selectLanguage": "ভাষা বাছক",
@@ -99,12 +101,61 @@
   },
   "login": {
     "title": "ULRMS",
-    "subtitle": "Unified Lab Record Management System",
+    "subtitle": "ইউনিফাইড লেব ৰেকৰ্ড মেনেজমেণ্ট চিষ্টেম",
     "features": {
-      "multiLanguage": "Multi-language Support",
-      "onlineViva": "Online Viva System",
-      "realTimeGrading": "Real-time Grading",
-      "comprehensiveReports": "Comprehensive Reports"
+      "multiLanguage": "বহু-ভাষা সমৰ্থন",
+      "onlineViva": "অনলাইন ভাইভা চিষ্টেম",
+      "realTimeGrading": "ৰিয়েল-টাইম গ্ৰেডিং",
+      "comprehensiveReports": "বিস্তৃত প্ৰতিবেদন"
     }
+  },
+  "dashboard": {
+    "welcomeBack": "Welcome back, {{name}}!",
+    "labActivities": "Here's what's happening with your lab activities.",
+    "lastUpdated": "Last Updated",
+    "class": "Class",
+    "group": "Group",
+    "assignedPc": "Assigned PC",
+    "noClassGroup": "No class or group assigned yet.",
+    "assignedToMe": "Assigned to Me",
+    "mySubmissions": "My Submissions",
+    "pendingVivas": "Pending Vivas",
+    "avgScore": "Avg. Score",
+    "graded": "graded",
+    "myAssignments": "My Assignments",
+    "pendingGrading": "Pending Grading",
+    "scheduledVivas": "Scheduled Vivas",
+    "completed": "Completed",
+    "totalUsers": "Total Users",
+    "totalClasses": "Total Classes",
+    "assignments": "Assignments",
+    "activeLabs": "Active Labs",
+    "maintenance": "maintenance",
+    "viewAssignments": "View Assignments",
+    "checkPendingWork": "Check pending work",
+    "trackYourWork": "Track your work",
+    "viewGrades": "View Grades",
+    "checkScores": "Check your scores",
+    "reportIssue": "Report Issue",
+    "createAssignment": "Create Assignment",
+    "addNewPractical": "Add new practical",
+    "reviewPending": "Review Pending",
+    "gradeSubmissions": "Grade submissions",
+    "manageClasses": "Manage Classes",
+    "viewStudents": "View students",
+    "shareWithStudents": "Share with students",
+    "manageComputerLabs": "Manage computer labs",
+    "userManagement": "User Management",
+    "manageAllUsers": "Manage all users",
+    "importStudents": "Import Students",
+    "bulkImportCsv": "Bulk import CSV",
+    "upcomingDeadlines": "Upcoming Deadlines",
+    "noUpcomingDeadlines": "No upcoming deadlines",
+    "submitted": "Submitted",
+    "revision": "Revision",
+    "pending": "Pending",
+    "daysLeft": "{{days}}d {{hours}}h left",
+    "hoursLeft": "{{hours}}h left",
+    "dueSoon": "Due soon!"
   }
 }
