--- a/client/public/locales/bn/common.json
+++ b/client/public/locales/bn/common.json
@@ -60,7 +60,9 @@
     "type": "ধরন",
     "email": "ইমেইল",
     "phone": "ফোন",
-    "address": "ঠিকানা"
+    "address": "ঠিকানা",
+    "viewAll": "View all",
+    "createTicket": "Create a ticket"
   },
   "auth": {
     "login": "লগইন",
@@ -71,23 +73,23 @@
     "forgotPassword": "পাসওয়ার্ড ভুলে গেছেন?",
     "noAccount": "অ্যাকাউন্ট নেই?",
     "signUp": "সাইন আপ",
-    "signingIn": "Signing in...",
-    "welcome": "Welcome back!",
-    "demoCredentials": "Demo Credentials",
-    "firstTimeLogin": "First time? Use PIN",
-    "usePassword": "Use Password",
-    "pin": "6-Digit PIN",
-    "verifyPin": "Verify PIN",
-    "setPassword": "Set Password",
-    "confirmPassword": "Confirm Password",
-    "verifying": "Verifying...",
-    "settingUp": "Setting up...",
-    "setPasswordLogin": "Set Password & Login",
-    "enterPinFromTeacher": "Enter PIN from your teacher",
-    "academicSession": "Academic Session",
-    "noSessions": "No sessions",
-    "current": "Current",
-    "pinVerified": "PIN verified! Set your password."
+    "signingIn": "লগইন হচ্ছে...",
+    "welcome": "স্বাগতম!",
+    "demoCredentials": "ডেমো ক্রেডেনশিয়াল",
+    "firstTimeLogin": "প্রথমবার? পিন ব্যবহার করুন",
+    "usePassword": "পাসওয়ার্ড ব্যবহার করুন",
+    "pin": "৬-সংখ্যার পিন",
+    "verifyPin": "পিন যাচাই করুন",
+    "setPassword": "পাসওয়ার্ড সেট করুন",
+    "confirmPassword": "পাসওয়ার্ড নিশ্চিত করুন",
+    "verifying": "যাচাই হচ্ছে...",
+    "settingUp": "সেট আপ হচ্ছে...",
+    "setPasswordLogin": "পাসওয়ার্ড সেট করুন এবং লগইন করুন",
+    "enterPinFromTeacher": "শিক্ষকের কাছ থেকে প্রাপ্ত পিন লিখুন",
+    "academicSession": "একাডেমিক সেশন",
+    "noSessions": "কোন সেশন নেই",
+    "current": "বর্তমান",
+    "pinVerified": "পিন যাচাই হয়েছে! আপনার পাসওয়ার্ড সেট করুন।"
   },
   "language": {
     "selectLanguage": "ভাষা নির্বাচন",
@@ -98,13 +100,62 @@
     "unifiedLabRecords": "ইউনিফাইড ল্যাব রেকর্ডস"
   },
   "login": {
-    "title": "ULRMS",
-    "subtitle": "Unified Lab Record Management System",
+    "title": "ইউএলআরএমএস",
+    "subtitle": "ইউনিফাইড ল্যাব রেকর্ড ম্যানেজমেন্ট সিস্টেম",
     "features": {
-      "multiLanguage": "Multi-language Support",
-      "onlineViva": "Online Viva System",
-      "realTimeGrading": "Real-time Grading",
-      "comprehensiveReports": "Comprehensive Reports"
+      "multiLanguage": "বহু-ভাষা সমর্থন",
+      "onlineViva": "অনলাইন ভাইভা সিস্টেম",
+      "realTimeGrading": "রিয়েল-টাইম গ্রেডিং",
+      "comprehensiveReports": "বিস্তারিত রিপোর্ট"
     }
+  },
+  "dashboard": {
+    "welcomeBack": "Welcome back, {{name}}!",
+    "labActivities": "Here's what's happening with your lab activities.",
+    "lastUpdated": "Last Updated",
+    "class": "Class",
+    "group": "Group",
+    "assignedPc": "Assigned PC",
+    "noClassGroup": "No class or group assigned yet.",
+    "assignedToMe": "Assigned to Me",
+    "mySubmissions": "My Submissions",
+    "pendingVivas": "Pending Vivas",
+    "avgScore": "Avg. Score",
+    "graded": "graded",
+    "myAssignments": "My Assignments",
+    "pendingGrading": "Pending Grading",
+    "scheduledVivas": "Scheduled Vivas",
+    "completed": "Completed",
+    "totalUsers": "Total Users",
+    "totalClasses": "Total Classes",
+    "assignments": "Assignments",
+    "activeLabs": "Active Labs",
+    "maintenance": "maintenance",
+    "viewAssignments": "View Assignments",
+    "checkPendingWork": "Check pending work",
+    "trackYourWork": "Track your work",
+    "viewGrades": "View Grades",
+    "checkScores": "Check your scores",
+    "reportIssue": "Report Issue",
+    "createAssignment": "Create Assignment",
+    "addNewPractical": "Add new practical",
+    "reviewPending": "Review Pending",
+    "gradeSubmissions": "Grade submissions",
+    "manageClasses": "Manage Classes",
+    "viewStudents": "View students",
+    "shareWithStudents": "Share with students",
+    "manageComputerLabs": "Manage computer labs",
+    "userManagement": "User Management",
+    "manageAllUsers": "Manage all users",
+    "importStudents": "Import Students",
+    "bulkImportCsv": "Bulk import CSV",
+    "upcomingDeadlines": "Upcoming Deadlines",
+    "noUpcomingDeadlines": "No upcoming deadlines",
+    "submitted": "Submitted",
+    "revision": "Revision",
+    "pending": "Pending",
+    "daysLeft": "{{days}}d {{hours}}h left",
+    "hoursLeft": "{{hours}}h left",
+    "dueSoon": "Due soon!"
   }
 }
