--- a/client/public/locales/es/common.json
+++ b/client/public/locales/es/common.json
@@ -60,7 +60,9 @@
     "type": "Tipo",
     "email": "Correo electrónico",
     "phone": "Teléfono",
-    "address": "Dirección"
+    "address": "Dirección",
+    "viewAll": "View all",
+    "createTicket": "Create a ticket"
   },
   "auth": {
     "login": "Iniciar sesión",
@@ -71,23 +73,23 @@
     "forgotPassword": "¿Olvidaste la contraseña?",
     "noAccount": "¿No tienes cuenta?",
     "signUp": "Registrarse",
-    "signingIn": "Signing in...",
-    "welcome": "Welcome back!",
-    "demoCredentials": "Demo Credentials",
-    "firstTimeLogin": "First time? Use PIN",
-    "usePassword": "Use Password",
-    "pin": "6-Digit PIN",
-    "verifyPin": "Verify PIN",
-    "setPassword": "Set Password",
-    "confirmPassword": "Confirm Password",
-    "verifying": "Verifying...",
-    "settingUp": "Setting up...",
-    "setPasswordLogin": "Set Password & Login",
-    "enterPinFromTeacher": "Enter PIN from your teacher",
-    "academicSession": "Academic Session",
-    "noSessions": "No sessions",
-    "current": "Current",
-    "pinVerified": "PIN verified! Set your password."
+    "signingIn": "Iniciando sesión...",
+    "welcome": "¡Bienvenido de vuelta!",
+    "demoCredentials": "Credenciales de demo",
+    "firstTimeLogin": "¿Primera vez? Use PIN",
+    "usePassword": "Usar contraseña",
+    "pin": "PIN de 6 dígitos",
+    "verifyPin": "Verificar PIN",
+    "setPassword": "Establecer contraseña",
+    "confirmPassword": "Confirmar contraseña",
+    "verifying": "Verificando...",
+    "settingUp": "Configurando...",
+    "setPasswordLogin": "Establecer contraseña e iniciar sesión",
+    "enterPinFromTeacher": "Ingrese el PIN recibido de su profesor",
+    "academicSession": "Sesión académica",
+    "noSessions": "Sin sesiones",
+    "current": "Actual",
+    "pinVerified": "¡PIN verificado! Establezca su contraseña."
   },
   "language": {
     "selectLanguage": "Seleccionar idioma",
@@ -99,12 +101,61 @@
   },
   "login": {
     "title": "ULRMS",
-    "subtitle": "Unified Lab Record Management System",
+    "subtitle": "Sistema Unificado de Gestión de Registros de Laboratorio",
     "features": {
-      "multiLanguage": "Multi-language Support",
-      "onlineViva": "Online Viva System",
-      "realTimeGrading": "Real-time Grading",
-      "comprehensiveReports": "Comprehensive Reports"
+      "multiLanguage": "Soporte multilingüe",
+      "onlineViva": "Sistema de Viva en línea",
+      "realTimeGrading": "Calificación en tiempo real",
+      "comprehensiveReports": "Informes completos"
     }
+  },
+  "dashboard": {
+    "welcomeBack": "Welcome back, {{name}}!",
+    "labActivities": "Here's what's happening with your lab activities.",
+    "lastUpdated": "Last Updated",
+    "class": "Class",
+    "group": "Group",
+    "assignedPc": "Assigned PC",
+    "noClassGroup": "No class or group assigned yet.",
+    "assignedToMe": "Assigned to Me",
+    "mySubmissions": "My Submissions",
+    "pendingVivas": "Pending Vivas",
+    "avgScore": "Avg. Score",
+    "graded": "graded",
+    "myAssignments": "My Assignments",
+    "pendingGrading": "Pending Grading",
+    "scheduledVivas": "Scheduled Vivas",
+    "completed": "Completed",
+    "totalUsers": "Total Users",
+    "totalClasses": "Total Classes",
+    "assignments": "Assignments",
+    "activeLabs": "Active Labs",
+    "maintenance": "maintenance",
+    "viewAssignments": "View Assignments",
+    "checkPendingWork": "Check pending work",
+    "trackYourWork": "Track your work",
+    "viewGrades": "View Grades",
+    "checkScores": "Check your scores",
+    "reportIssue": "Report Issue",
+    "createAssignment": "Create Assignment",
+    "addNewPractical": "Add new practical",
+    "reviewPending": "Review Pending",
+    "gradeSubmissions": "Grade submissions",
+    "manageClasses": "Manage Classes",
+    "viewStudents": "View students",
+    "shareWithStudents": "Share with students",
+    "manageComputerLabs": "Manage computer labs",
+    "userManagement": "User Management",
+    "manageAllUsers": "Manage all users",
+    "importStudents": "Import Students",
+    "bulkImportCsv": "Bulk import CSV",
+    "upcomingDeadlines": "Upcoming Deadlines",
+    "noUpcomingDeadlines": "No upcoming deadlines",
+    "submitted": "Submitted",
+    "revision": "Revision",
+    "pending": "Pending",
+    "daysLeft": "{{days}}d {{hours}}h left",
+    "hoursLeft": "{{hours}}h left",
+    "dueSoon": "Due soon!"
   }
 }
