--- a/client/public/locales/fr/common.json
+++ b/client/public/locales/fr/common.json
@@ -60,7 +60,9 @@
     "type": "Type",
     "email": "Email",
     "phone": "Téléphone",
-    "address": "Adresse"
+    "address": "Adresse",
+    "viewAll": "View all",
+    "createTicket": "Create a ticket"
   },
   "auth": {
     "login": "Connexion",
@@ -71,23 +73,23 @@
     "forgotPassword": "Mot de passe oublié?",
     "noAccount": "Pas de compte?",
     "signUp": "S'inscrire",
-    "signingIn": "Signing in...",
-    "welcome": "Welcome back!",
-    "demoCredentials": "Demo Credentials",
-    "firstTimeLogin": "First time? Use PIN",
-    "usePassword": "Use Password",
-    "pin": "6-Digit PIN",
-    "verifyPin": "Verify PIN",
-    "setPassword": "Set Password",
-    "confirmPassword": "Confirm Password",
-    "verifying": "Verifying...",
-    "settingUp": "Setting up...",
-    "setPasswordLogin": "Set Password & Login",
-    "enterPinFromTeacher": "Enter PIN from your teacher",
-    "academicSession": "Academic Session",
-    "noSessions": "No sessions",
-    "current": "Current",
-    "pinVerified": "PIN verified! Set your password."
+    "signingIn": "Connexion en cours...",
+    "welcome": "Bon retour!",
+    "demoCredentials": "Identifiants de démo",
+    "firstTimeLogin": "Première fois? Utilisez le PIN",
+    "usePassword": "Utiliser le mot de passe",
+    "pin": "PIN à 6 chiffres",
+    "verifyPin": "Vérifier le PIN",
+    "setPassword": "Définir le mot de passe",
+    "confirmPassword": "Confirmer le mot de passe",
+    "verifying": "Vérification...",
+    "settingUp": "Configuration...",
+    "setPasswordLogin": "Définir le mot de passe et se connecter",
+    "enterPinFromTeacher": "Entrez le PIN reçu de votre enseignant",
+    "academicSession": "Session académique",
+    "noSessions": "Pas de sessions",
+    "current": "Actuel",
+    "pinVerified": "PIN vérifié! Définissez votre mot de passe."
   },
   "language": {
     "selectLanguage": "Sélectionner la langue",
@@ -99,12 +101,61 @@
   },
   "login": {
     "title": "ULRMS",
-    "subtitle": "Unified Lab Record Management System",
+    "subtitle": "Système Unifié de Gestion des Registres de Laboratoire",
     "features": {
-      "multiLanguage": "Multi-language Support",
-      "onlineViva": "Online Viva System",
-      "realTimeGrading": "Real-time Grading",
-      "comprehensiveReports": "Comprehensive Reports"
+      "multiLanguage": "Support multilingue",
+      "onlineViva": "Système de Viva en ligne",
+      "realTimeGrading": "Notation en temps réel",
+      "comprehensiveReports": "Rapports complets"
     }
+  },
+  "dashboard": {
+    "welcomeBack": "Welcome back, {{name}}!",
+    "labActivities": "Here's what's happening with your lab activities.",
+    "lastUpdated": "Last Updated",
+    "class": "Class",
+    "group": "Group",
+    "assignedPc": "Assigned PC",
+    "noClassGroup": "No class or group assigned yet.",
+    "assignedToMe": "Assigned to Me",
+    "mySubmissions": "My Submissions",
+    "pendingVivas": "Pending Vivas",
+    "avgScore": "Avg. Score",
+    "graded": "graded",
+    "myAssignments": "My Assignments",
+    "pendingGrading": "Pending Grading",
+    "scheduledVivas": "Scheduled Vivas",
+    "completed": "Completed",
+    "totalUsers": "Total Users",
+    "totalClasses": "Total Classes",
+    "assignments": "Assignments",
+    "activeLabs": "Active Labs",
+    "maintenance": "maintenance",
+    "viewAssignments": "View Assignments",
+    "checkPendingWork": "Check pending work",
+    "trackYourWork": "Track your work",
+    "viewGrades": "View Grades",
+    "checkScores": "Check your scores",
+    "reportIssue": "Report Issue",
+    "createAssignment": "Create Assignment",
+    "addNewPractical": "Add new practical",
+    "reviewPending": "Review Pending",
+    "gradeSubmissions": "Grade submissions",
+    "manageClasses": "Manage Classes",
+    "viewStudents": "View students",
+    "shareWithStudents": "Share with students",
+    "manageComputerLabs": "Manage computer labs",
+    "userManagement": "User Management",
+    "manageAllUsers": "Manage all users",
+    "importStudents": "Import Students",
+    "bulkImportCsv": "Bulk import CSV",
+    "upcomingDeadlines": "Upcoming Deadlines",
+    "noUpcomingDeadlines": "No upcoming deadlines",
+    "submitted": "Submitted",
+    "revision": "Revision",
+    "pending": "Pending",
+    "daysLeft": "{{days}}d {{hours}}h left",
+    "hoursLeft": "{{hours}}h left",
+    "dueSoon": "Due soon!"
   }
 }
