--- a/client/public/locales/gu/common.json
+++ b/client/public/locales/gu/common.json
@@ -60,10 +60,12 @@
     "type": "પ્રકાર",
     "email": "ઈમેલ",
     "phone": "ફોન",
-    "address": "સરનામું"
+    "address": "સરનામું",
+    "viewAll": "View all",
+    "createTicket": "Create a ticket"
   },
   "auth": {
-    "login": "લૉગ ઇન",
+    "login": "સાઇન ઇન કરો",
     "logout": "લૉગ આઉટ",
     "email": "ઈમેલ સરનામું",
     "password": "પાસવર્ડ",
@@ -71,23 +73,23 @@
     "forgotPassword": "પાસવર્ડ ભૂલી ગયા?",
     "noAccount": "એકાઉન્ટ નથી?",
     "signUp": "સાઇન અપ",
-    "signingIn": "Signing in...",
-    "welcome": "Welcome back!",
-    "demoCredentials": "Demo Credentials",
-    "firstTimeLogin": "First time? Use PIN",
-    "usePassword": "Use Password",
-    "pin": "6-Digit PIN",
-    "verifyPin": "Verify PIN",
-    "setPassword": "Set Password",
-    "confirmPassword": "Confirm Password",
-    "verifying": "Verifying...",
-    "settingUp": "Setting up...",
-    "setPasswordLogin": "Set Password & Login",
-    "enterPinFromTeacher": "Enter PIN from your teacher",
-    "academicSession": "Academic Session",
-    "noSessions": "No sessions",
-    "current": "Current",
-    "pinVerified": "PIN verified! Set your password."
+    "signingIn": "સાઇન ઇન થઈ રહ્યું છે...",
+    "welcome": "ફરી સ્વાગત છે!",
+    "demoCredentials": "ડેમો ક્રેડેન્શિયલ્સ",
+    "firstTimeLogin": "પહેલી વાર? PIN વાપરો",
+    "usePassword": "પાસવર્ડ વાપરો",
+    "pin": "6-અંકનો PIN",
+    "verifyPin": "PIN ચકાસો",
+    "setPassword": "પાસવર્ડ સેટ કરો",
+    "confirmPassword": "પાસવર્ડ કન્ફર્મ કરો",
+    "verifying": "ચકાસાઈ રહ્યું છે...",
+    "settingUp": "સેટ અપ થઈ રહ્યું છે...",
+    "setPasswordLogin": "પાસવર્ડ સેટ કરો અને લૉગિન કરો",
+    "enterPinFromTeacher": "શિક્ષક પાસેથી મળેલ PIN દાખલ કરો",
+    "academicSession": "શૈક્ષણિક સત્ર",
+    "noSessions": "કોઈ સત્ર નથી",
+    "current": "વર્તમાન",
+    "pinVerified": "PIN ચકાસાઈ! તમારો પાસવર્ડ સેટ કરો."
   },
   "language": {
     "selectLanguage": "ભાષા પસંદ કરો",
@@ -99,12 +101,61 @@
   },
   "login": {
     "title": "ULRMS",
-    "subtitle": "Unified Lab Record Management System",
+    "subtitle": "યુનિફાઈડ લેબ રેકોર્ડ મેનેજમેન્ટ સિસ્ટમ",
     "features": {
-      "multiLanguage": "Multi-language Support",
-      "onlineViva": "Online Viva System",
-      "realTimeGrading": "Real-time Grading",
-      "comprehensiveReports": "Comprehensive Reports"
+      "multiLanguage": "બહુ-ભાષા સમર્થન",
+      "onlineViva": "ઓનલાઈન વાઈવા સિસ્ટમ",
+      "realTimeGrading": "રિયલ-ટાઈમ ગ્રેડિંગ",
+      "comprehensiveReports": "વ્યાપક અહેવાલો"
     }
+  },
+  "dashboard": {
+    "welcomeBack": "Welcome back, {{name}}!",
+    "labActivities": "Here's what's happening with your lab activities.",
+    "lastUpdated": "Last Updated",
+    "class": "Class",
+    "group": "Group",
+    "assignedPc": "Assigned PC",
+    "noClassGroup": "No class or group assigned yet.",
+    "assignedToMe": "Assigned to Me",
+    "mySubmissions": "My Submissions",
+    "pendingVivas": "Pending Vivas",
+    "avgScore": "Avg. Score",
+    "graded": "graded",
+    "myAssignments": "My Assignments",
+    "pendingGrading": "Pending Grading",
+    "scheduledVivas": "Scheduled Vivas",
+    "completed": "Completed",
+    "totalUsers": "Total Users",
+    "totalClasses": "Total Classes",
+    "assignments": "Assignments",
+    "activeLabs": "Active Labs",
+    "maintenance": "maintenance",
+    "viewAssignments": "View Assignments",
+    "checkPendingWork": "Check pending work",
+    "trackYourWork": "Track your work",
+    "viewGrades": "View Grades",
+    "checkScores": "Check your scores",
+    "reportIssue": "Report Issue",
+    "createAssignment": "Create Assignment",
+    "addNewPractical": "Add new practical",
+    "reviewPending": "Review Pending",
+    "gradeSubmissions": "Grade submissions",
+    "manageClasses": "Manage Classes",
+    "viewStudents": "View students",
+    "shareWithStudents": "Share with students",
+    "manageComputerLabs": "Manage computer labs",
+    "userManagement": "User Management",
+    "manageAllUsers": "Manage all users",
+    "importStudents": "Import Students",
+    "bulkImportCsv": "Bulk import CSV",
+    "upcomingDeadlines": "Upcoming Deadlines",
+    "noUpcomingDeadlines": "No upcoming deadlines",
+    "submitted": "Submitted",
+    "revision": "Revision",
+    "pending": "Pending",
+    "daysLeft": "{{days}}d {{hours}}h left",
+    "hoursLeft": "{{hours}}h left",
+    "dueSoon": "Due soon!"
   }
 }
