--- a/client/public/locales/hi/common.json
+++ b/client/public/locales/hi/common.json
@@ -60,7 +60,9 @@
         "type": "प्रकार",
         "email": "ईमेल",
         "phone": "फ़ोन",
-        "address": "पता"
+        "address": "पता",
+        "viewAll": "सभी देखें",
+        "createTicket": "टिकट बनाएं"
     },
     "auth": {
         "login": "साइन इन करें",
@@ -106,5 +108,54 @@
             "realTimeGrading": "रियल-टाइम ग्रेडिंग",
             "comprehensiveReports": "व्यापक रिपोर्ट"
         }
+    },
+    "dashboard": {
+        "welcomeBack": "स्वागत है, {{name}}!",
+        "labActivities": "आपकी लैब गतिविधियों की जानकारी।",
+        "lastUpdated": "अंतिम अपडेट",
+        "class": "कक्षा",
+        "group": "समूह",
+        "assignedPc": "असाइन किया गया पीसी",
+        "noClassGroup": "अभी कोई कक्षा या समूह असाइन नहीं है।",
+        "assignedToMe": "मुझे सौंपा गया",
+        "mySubmissions": "मेरी प्रस्तुतियाँ",
+        "pendingVivas": "लंबित वाइवा",
+        "avgScore": "औसत स्कोर",
+        "graded": "ग्रेड किया गया",
+        "myAssignments": "मेरे असाइनमेंट",
+        "pendingGrading": "ग्रेडिंग बाकी",
+        "scheduledVivas": "निर्धारित वाइवा",
+        "completed": "पूर्ण",
+        "totalUsers": "कुल उपयोगकर्ता",
+        "totalClasses": "कुल कक्षाएं",
+        "assignments": "असाइनमेंट",
+        "activeLabs": "सक्रिय लैब",
+        "maintenance": "रखरखाव",
+        "viewAssignments": "असाइनमेंट देखें",
+        "checkPendingWork": "बाकी काम देखें",
+        "trackYourWork": "अपना काम ट्रैक करें",
+        "viewGrades": "ग्रेड देखें",
+        "checkScores": "अपने स्कोर देखें",
+        "reportIssue": "समस्या दर्ज करें",
+        "createAssignment": "असाइनमेंट बनाएं",
+        "addNewPractical": "नया प्रैक्टिकल जोड़ें",
+        "reviewPending": "समीक्षा बाकी",
+        "gradeSubmissions": "सबमिशन ग्रेड करें",
+        "manageClasses": "कक्षाएं प्रबंधित करें",
+        "viewStudents": "छात्र देखें",
+        "shareWithStudents": "छात्रों के साथ साझा करें",
+        "manageComputerLabs": "कंप्यूटर लैब प्रबंधित करें",
+        "userManagement": "उपयोगकर्ता प्रबंधन",
+        "manageAllUsers": "सभी उपयोगकर्ता प्रबंधित करें",
+        "importStudents": "छात्र आयात करें",
+        "bulkImportCsv": "बल्क CSV आयात",
+        "upcomingDeadlines": "आने वाली समय सीमाएं",
+        "noUpcomingDeadlines": "कोई आने वाली समय सीमा नहीं",
+        "submitted": "जमा किया गया",
+        "revision": "संशोधन",
+        "pending": "लंबित",
+        "daysLeft": "{{days}}द {{hours}}घ बाकी",
+        "hoursLeft": "{{hours}}घ बाकी",
+        "dueSoon": "जल्द ही देय!"
     }
 }
