--- a/client/public/locales/kn/common.json
+++ b/client/public/locales/kn/common.json
@@ -60,10 +60,12 @@
     "type": "ಪ್ರಕಾರ",
     "email": "ಇಮೇಲ್",
     "phone": "ಫೋನ್",
-    "address": "ವಿಳಾಸ"
+    "address": "ವಿಳಾಸ",
+    "viewAll": "View all",
+    "createTicket": "Create a ticket"
   },
   "auth": {
-    "login": "ಲಾಗಿನ್",
+    "login": "ಸೈನ್ ಇನ್",
     "logout": "ಲಾಗ್‌ಔಟ್",
     "email": "ಇಮೇಲ್ ವಿಳಾಸ",
     "password": "ಪಾಸ್‌ವರ್ಡ್",
@@ -71,23 +73,23 @@
     "forgotPassword": "ಪಾಸ್‌ವರ್ಡ್ ಮರೆತಿರಾ?",
     "noAccount": "ಖಾತೆ ಇಲ್ಲವೇ?",
     "signUp": "ಸೈನ್ ಅಪ್",
-    "signingIn": "Signing in...",
-    "welcome": "Welcome back!",
-    "demoCredentials": "Demo Credentials",
-    "firstTimeLogin": "First time? Use PIN",
-    "usePassword": "Use Password",
-    "pin": "6-Digit PIN",
-    "verifyPin": "Verify PIN",
-    "setPassword": "Set Password",
-    "confirmPassword": "Confirm Password",
-    "verifying": "Verifying...",
-    "settingUp": "Setting up...",
-    "setPasswordLogin": "Set Password & Login",
-    "enterPinFromTeacher": "Enter PIN from your teacher",
-    "academicSession": "Academic Session",
-    "noSessions": "No sessions",
-    "current": "Current",
-    "pinVerified": "PIN verified! Set your password."
+    "signingIn": "ಸೈನ್ ಇನ್ ಆಗುತ್ತಿದೆ...",
+    "welcome": "ಮತ್ತೆ ಸ್ವಾಗತ!",
+    "demoCredentials": "ಡೆಮೊ ರುಜುವಾತುಗಳು",
+    "firstTimeLogin": "ಮೊದಲ ಬಾರಿಯೇ? PIN ಬಳಸಿ",
+    "usePassword": "ಪಾಸ್‌ವರ್ಡ್ ಬಳಸಿ",
+    "pin": "6-ಅಂಕಿ PIN",
+    "verifyPin": "PIN ಪರಿಶೀಲಿಸಿ",
+    "setPassword": "ಪಾಸ್‌ವರ್ಡ್ ಹೊಂದಿಸಿ",
+    "confirmPassword": "ಪಾಸ್‌ವರ್ಡ್ ದೃಢೀಕರಿಸಿ",
+    "verifying": "ಪರಿಶೀಲಿಸುತ್ತಿದೆ...",
+    "settingUp": "ಸೆಟ್ ಅಪ್ ಆಗುತ್ತಿದೆ...",
+    "setPasswordLogin": "ಪಾಸ್‌ವರ್ಡ್ ಹೊಂದಿಸಿ ಮತ್ತು ಲಾಗಿನ್ ಮಾಡಿ",
+    "enterPinFromTeacher": "ಶಿಕ್ಷಕರಿಂದ ಪಡೆದ PIN ನಮೂದಿಸಿ",
+    "academicSession": "ಶೈಕ್ಷಣಿಕ ಅವಧಿ",
+    "noSessions": "ಯಾವುದೇ ಅವಧಿಗಳಿಲ್ಲ",
+    "current": "ಪ್ರಸ್ತುತ",
+    "pinVerified": "PIN ಪರಿಶೀಲಿಸಲಾಗಿದೆ! ನಿಮ್ಮ ಪಾಸ್‌ವರ್ಡ್ ಹೊಂದಿಸಿ."
   },
   "language": {
     "selectLanguage": "ಭಾಷೆಯನ್ನು ಆಯ್ಕೆಮಾಡಿ",
@@ -99,12 +101,61 @@
   },
   "login": {
     "title": "ULRMS",
-    "subtitle": "Unified Lab Record Management System",
+    "subtitle": "ಯೂನಿಫೈಡ್ ಲ್ಯಾಬ್ ರೆಕಾರ್ಡ್ ಮ್ಯಾನೇಜ್‌ಮೆಂಟ್ ಸಿಸ್ಟಮ್",
     "features": {
-      "multiLanguage": "Multi-language Support",
-      "onlineViva": "Online Viva System",
-      "realTimeGrading": "Real-time Grading",
-      "comprehensiveReports": "Comprehensive Reports"
+      "multiLanguage": "ಬಹು-ಭಾಷಾ ಬೆಂಬಲ",
+      "onlineViva": "ಆನ್‌ಲೈನ್ ವೈವಾ ಸಿಸ್ಟಮ್",
+      "realTimeGrading": "ರಿಯಲ್-ಟೈಮ್ ಗ್ರೇಡಿಂಗ್",
+      "comprehensiveReports": "ಸಮಗ್ರ ವರದಿಗಳು"
     }
+  },
+  "dashboard": {
+    "welcomeBack": "Welcome back, {{name}}!",
+    "labActivities": "Here's what's happening with your lab activities.",
+    "lastUpdated": "Last Updated",
+    "class": "Class",
+    "group": "Group",
+    "assignedPc": "Assigned PC",
+    "noClassGroup": "No class or group assigned yet.",
+    "assignedToMe": "Assigned to Me",
+    "mySubmissions": "My Submissions",
+    "pendingVivas": "Pending Vivas",
+    "avgScore": "Avg. Score",
+    "graded": "graded",
+    "myAssignments": "My Assignments",
+    "pendingGrading": "Pending Grading",
+    "scheduledVivas": "Scheduled Vivas",
+    "completed": "Completed",
+    "totalUsers": "Total Users",
+    "totalClasses": "Total Classes",
+    "assignments": "Assignments",
+    "activeLabs": "Active Labs",
+    "maintenance": "maintenance",
+    "viewAssignments": "View Assignments",
+    "checkPendingWork": "Check pending work",
+    "trackYourWork": "Track your work",
+    "viewGrades": "View Grades",
+    "checkScores": "Check your scores",
+    "reportIssue": "Report Issue",
+    "createAssignment": "Create Assignment",
+    "addNewPractical": "Add new practical",
+    "reviewPending": "Review Pending",
+    "gradeSubmissions": "Grade submissions",
+    "manageClasses": "Manage Classes",
+    "viewStudents": "View students",
+    "shareWithStudents": "Share with students",
+    "manageComputerLabs": "Manage computer labs",
+    "userManagement": "User Management",
+    "manageAllUsers": "Manage all users",
+    "importStudents": "Import Students",
+    "bulkImportCsv": "Bulk import CSV",
+    "upcomingDeadlines": "Upcoming Deadlines",
+    "noUpcomingDeadlines": "No upcoming deadlines",
+    "submitted": "Submitted",
+    "revision": "Revision",
+    "pending": "Pending",
+    "daysLeft": "{{days}}d {{hours}}h left",
+    "hoursLeft": "{{hours}}h left",
+    "dueSoon": "Due soon!"
   }
 }
