--- a/client/public/locales/ml/common.json
+++ b/client/public/locales/ml/common.json
@@ -60,10 +60,12 @@
     "type": "തരം",
     "email": "ഇമെയിൽ",
     "phone": "ഫോൺ",
-    "address": "വിലാസം"
+    "address": "വിലാസം",
+    "viewAll": "View all",
+    "createTicket": "Create a ticket"
   },
   "auth": {
-    "login": "ലോഗിൻ",
+    "login": "സൈൻ ഇൻ",
     "logout": "ലോഗൗട്ട്",
     "email": "ഇമെയിൽ വിലാസം",
     "password": "പാസ്‌വേഡ്",
@@ -71,23 +73,23 @@
     "forgotPassword": "പാസ്‌വേഡ് മറന്നോ?",
     "noAccount": "അക്കൗണ്ട് ഇല്ലേ?",
     "signUp": "സൈൻ അപ്പ്",
-    "signingIn": "Signing in...",
-    "welcome": "Welcome back!",
-    "demoCredentials": "Demo Credentials",
-    "firstTimeLogin": "First time? Use PIN",
-    "usePassword": "Use Password",
-    "pin": "6-Digit PIN",
-    "verifyPin": "Verify PIN",
-    "setPassword": "Set Password",
-    "confirmPassword": "Confirm Password",
-    "verifying": "Verifying...",
-    "settingUp": "Setting up...",
-    "setPasswordLogin": "Set Password & Login",
-    "enterPinFromTeacher": "Enter PIN from your teacher",
-    "academicSession": "Academic Session",
-    "noSessions": "No sessions",
-    "current": "Current",
-    "pinVerified": "PIN verified! Set your password."
+    "signingIn": "സൈൻ ഇൻ ചെയ്യുന്നു...",
+    "welcome": "തിരികെ സ്വാഗതം!",
+    "demoCredentials": "ഡെമോ ക്രെഡൻഷ്യലുകൾ",
+    "firstTimeLogin": "ആദ്യമായി? PIN ഉപയോഗിക്കുക",
+    "usePassword": "പാസ്‌വേഡ് ഉപയോഗിക്കുക",
+    "pin": "6-അക്ക PIN",
+    "verifyPin": "PIN പരിശോധിക്കുക",
+    "setPassword": "പാസ്‌വേഡ് സജ്ജമാക്കുക",
+    "confirmPassword": "പാസ്‌വേഡ് സ്ഥിരീകരിക്കുക",
+    "verifying": "പരിശോധിക്കുന്നു...",
+    "settingUp": "സജ്ജമാക്കുന്നു...",
+    "setPasswordLogin": "പാസ്‌വേഡ് സെറ്റ് ചെയ്ത് ലോഗിൻ ചെയ്യുക",
+    "enterPinFromTeacher": "അധ്യാപകനിൽ നിന്ന് ലഭിച്ച PIN നൽകുക",
+    "academicSession": "അക്കാദമിക് സെഷൻ",
+    "noSessions": "സെഷനുകളില്ല",
+    "current": "നിലവിലെ",
+    "pinVerified": "PIN പരിശോധിച്ചു! നിങ്ങളുടെ പാസ്‌വേഡ് സെറ്റ് ചെയ്യുക."
   },
   "language": {
     "selectLanguage": "ഭാഷ തിരഞ്ഞെടുക്കുക",
@@ -99,12 +101,61 @@
   },
   "login": {
     "title": "ULRMS",
-    "subtitle": "Unified Lab Record Management System",
+    "subtitle": "യൂണിഫൈഡ് ലാബ് റെക്കോർഡ് മാനേജ്മെന്റ് സിസ്റ്റം",
     "features": {
-      "multiLanguage": "Multi-language Support",
-      "onlineViva": "Online Viva System",
-      "realTimeGrading": "Real-time Grading",
-      "comprehensiveReports": "Comprehensive Reports"
+      "multiLanguage": "ബഹു-ഭാഷാ പിന്തുണ",
+      "onlineViva": "ഓൺലൈൻ വൈവ സിസ്റ്റം",
+      "realTimeGrading": "റിയൽ-ടൈം ഗ്രേഡിംഗ്",
+      "comprehensiveReports": "സമഗ്ര റിപ്പോർട്ടുകൾ"
     }
+  },
+  "dashboard": {
+    "welcomeBack": "Welcome back, {{name}}!",
+    "labActivities": "Here's what's happening with your lab activities.",
+    "lastUpdated": "Last Updated",
+    "class": "Class",
+    "group": "Group",
+    "assignedPc": "Assigned PC",
+    "noClassGroup": "No class or group assigned yet.",
+    "assignedToMe": "Assigned to Me",
+    "mySubmissions": "My Submissions",
+    "pendingVivas": "Pending Vivas",
+    "avgScore": "Avg. Score",
+    "graded": "graded",
+    "myAssignments": "My Assignments",
+    "pendingGrading": "Pending Grading",
+    "scheduledVivas": "Scheduled Vivas",
+    "completed": "Completed",
+    "totalUsers": "Total Users",
+    "totalClasses": "Total Classes",
+    "assignments": "Assignments",
+    "activeLabs": "Active Labs",
+    "maintenance": "maintenance",
+    "viewAssignments": "View Assignments",
+    "checkPendingWork": "Check pending work",
+    "trackYourWork": "Track your work",
+    "viewGrades": "View Grades",
+    "checkScores": "Check your scores",
+    "reportIssue": "Report Issue",
+    "createAssignment": "Create Assignment",
+    "addNewPractical": "Add new practical",
+    "reviewPending": "Review Pending",
+    "gradeSubmissions": "Grade submissions",
+    "manageClasses": "Manage Classes",
+    "viewStudents": "View students",
+    "shareWithStudents": "Share with students",
+    "manageComputerLabs": "Manage computer labs",
+    "userManagement": "User Management",
+    "manageAllUsers": "Manage all users",
+    "importStudents": "Import Students",
+    "bulkImportCsv": "Bulk import CSV",
+    "upcomingDeadlines": "Upcoming Deadlines",
+    "noUpcomingDeadlines": "No upcoming deadlines",
+    "submitted": "Submitted",
+    "revision": "Revision",
+    "pending": "Pending",
+    "daysLeft": "{{days}}d {{hours}}h left",
+    "hoursLeft": "{{hours}}h left",
+    "dueSoon": "Due soon!"
   }
 }
