--- a/client/public/locales/mr/common.json
+++ b/client/public/locales/mr/common.json
@@ -60,10 +60,12 @@
     "type": "प्रकार",
     "email": "ईमेल",
     "phone": "फोन",
-    "address": "पत्ता"
+    "address": "पत्ता",
+    "viewAll": "View all",
+    "createTicket": "Create a ticket"
   },
   "auth": {
-    "login": "लॉग इन",
+    "login": "साइन इन करा",
     "logout": "लॉग आउट",
     "email": "ईमेल पत्ता",
     "password": "पासवर्ड",
@@ -71,23 +73,23 @@
     "forgotPassword": "पासवर्ड विसरलात?",
     "noAccount": "खाते नाही?",
     "signUp": "साइन अप",
-    "signingIn": "Signing in...",
-    "welcome": "Welcome back!",
-    "demoCredentials": "Demo Credentials",
-    "firstTimeLogin": "First time? Use PIN",
-    "usePassword": "Use Password",
-    "pin": "6-Digit PIN",
-    "verifyPin": "Verify PIN",
-    "setPassword": "Set Password",
-    "confirmPassword": "Confirm Password",
-    "verifying": "Verifying...",
-    "settingUp": "Setting up...",
-    "setPasswordLogin": "Set Password & Login",
-    "enterPinFromTeacher": "Enter PIN from your teacher",
-    "academicSession": "Academic Session",
-    "noSessions": "No sessions",
-    "current": "Current",
-    "pinVerified": "PIN verified! Set your password."
+    "signingIn": "साइन इन होत आहे...",
+    "welcome": "परत स्वागत!",
+    "demoCredentials": "डेमो क्रेडेंशियल्स",
+    "firstTimeLogin": "पहिल्यांदा? पिन वापरा",
+    "usePassword": "पासवर्ड वापरा",
+    "pin": "6-अंकी पिन",
+    "verifyPin": "पिन सत्यापित करा",
+    "setPassword": "पासवर्ड सेट करा",
+    "confirmPassword": "पासवर्ड पुष्टी करा",
+    "verifying": "सत्यापित होत आहे...",
+    "settingUp": "सेट अप होत आहे...",
+    "setPasswordLogin": "पासवर्ड सेट करा आणि लॉगिन करा",
+    "enterPinFromTeacher": "शिक्षकांकडून मिळालेला पिन टाका",
+    "academicSession": "शैक्षणिक सत्र",
+    "noSessions": "कोणतेही सत्र नाही",
+    "current": "वर्तमान",
+    "pinVerified": "पिन सत्यापित! आपला पासवर्ड सेट करा."
   },
   "language": {
     "selectLanguage": "भाषा निवडा",
@@ -99,12 +101,61 @@
   },
   "login": {
     "title": "ULRMS",
-    "subtitle": "Unified Lab Record Management System",
+    "subtitle": "युनिफाइड लॅब रेकॉर्ड मॅनेजमेंट सिस्टम",
     "features": {
-      "multiLanguage": "Multi-language Support",
-      "onlineViva": "Online Viva System",
-      "realTimeGrading": "Real-time Grading",
-      "comprehensiveReports": "Comprehensive Reports"
+      "multiLanguage": "बहु-भाषा समर्थन",
+      "onlineViva": "ऑनलाइन व्हायवा सिस्टम",
+      "realTimeGrading": "रिअल-टाइम ग्रेडिंग",
+      "comprehensiveReports": "सर्वसमावेशक अहवाल"
     }
+  },
+  "dashboard": {
+    "welcomeBack": "Welcome back, {{name}}!",
+    "labActivities": "Here's what's happening with your lab activities.",
+    "lastUpdated": "Last Updated",
+    "class": "Class",
+    "group": "Group",
+    "assignedPc": "Assigned PC",
+    "noClassGroup": "No class or group assigned yet.",
+    "assignedToMe": "Assigned to Me",
+    "mySubmissions": "My Submissions",
+    "pendingVivas": "Pending Vivas",
+    "avgScore": "Avg. Score",
+    "graded": "graded",
+    "myAssignments": "My Assignments",
+    "pendingGrading": "Pending Grading",
+    "scheduledVivas": "Scheduled Vivas",
+    "completed": "Completed",
+    "totalUsers": "Total Users",
+    "totalClasses": "Total Classes",
+    "assignments": "Assignments",
+    "activeLabs": "Active Labs",
+    "maintenance": "maintenance",
+    "viewAssignments": "View Assignments",
+    "checkPendingWork": "Check pending work",
+    "trackYourWork": "Track your work",
+    "viewGrades": "View Grades",
+    "checkScores": "Check your scores",
+    "reportIssue": "Report Issue",
+    "createAssignment": "Create Assignment",
+    "addNewPractical": "Add new practical",
+    "reviewPending": "Review Pending",
+    "gradeSubmissions": "Grade submissions",
+    "manageClasses": "Manage Classes",
+    "viewStudents": "View students",
+    "shareWithStudents": "Share with students",
+    "manageComputerLabs": "Manage computer labs",
+    "userManagement": "User Management",
+    "manageAllUsers": "Manage all users",
+    "importStudents": "Import Students",
+    "bulkImportCsv": "Bulk import CSV",
+    "upcomingDeadlines": "Upcoming Deadlines",
+    "noUpcomingDeadlines": "No upcoming deadlines",
+    "submitted": "Submitted",
+    "revision": "Revision",
+    "pending": "Pending",
+    "daysLeft": "{{days}}d {{hours}}h left",
+    "hoursLeft": "{{hours}}h left",
+    "dueSoon": "Due soon!"
   }
 }
