--- a/client/public/locales/ne/common.json
+++ b/client/public/locales/ne/common.json
@@ -60,10 +60,12 @@
     "type": "प्रकार",
     "email": "इमेल",
     "phone": "फोन",
-    "address": "ठेगाना"
+    "address": "ठेगाना",
+    "viewAll": "View all",
+    "createTicket": "Create a ticket"
   },
   "auth": {
-    "login": "लग इन",
+    "login": "साइन इन",
     "logout": "लग आउट",
     "email": "इमेल ठेगाना",
     "password": "पासवर्ड",
@@ -71,23 +73,23 @@
     "forgotPassword": "पासवर्ड बिर्सनुभयो?",
     "noAccount": "खाता छैन?",
     "signUp": "साइन अप",
-    "signingIn": "Signing in...",
-    "welcome": "Welcome back!",
-    "demoCredentials": "Demo Credentials",
-    "firstTimeLogin": "First time? Use PIN",
-    "usePassword": "Use Password",
-    "pin": "6-Digit PIN",
-    "verifyPin": "Verify PIN",
-    "setPassword": "Set Password",
-    "confirmPassword": "Confirm Password",
-    "verifying": "Verifying...",
-    "settingUp": "Setting up...",
-    "setPasswordLogin": "Set Password & Login",
-    "enterPinFromTeacher": "Enter PIN from your teacher",
-    "academicSession": "Academic Session",
-    "noSessions": "No sessions",
-    "current": "Current",
-    "pinVerified": "PIN verified! Set your password."
+    "signingIn": "साइन इन हुँदैछ...",
+    "welcome": "फेरि स्वागत छ!",
+    "demoCredentials": "डेमो प्रमाणपत्र",
+    "firstTimeLogin": "पहिलो पटक? PIN प्रयोग गर्नुहोस्",
+    "usePassword": "पासवर्ड प्रयोग गर्नुहोस्",
+    "pin": "6-अंकको PIN",
+    "verifyPin": "PIN प्रमाणित गर्नुहोस्",
+    "setPassword": "पासवर्ड सेट गर्नुहोस्",
+    "confirmPassword": "पासवर्ड पुष्टि गर्नुहोस्",
+    "verifying": "प्रमाणित हुँदैछ...",
+    "settingUp": "सेट अप हुँदैछ...",
+    "setPasswordLogin": "पासवर्ड सेट गर्नुहोस् र लग इन गर्नुहोस्",
+    "enterPinFromTeacher": "शिक्षकबाट प्राप्त PIN दर्ता गर्नुहोस्",
+    "academicSession": "शैक्षिक सत्र",
+    "noSessions": "कुनै सत्र छैन",
+    "current": "हालको",
+    "pinVerified": "PIN प्रमाणित भयो! तपाईंको पासवर्ड सेट गर्नुहोस्।"
   },
   "language": {
     "selectLanguage": "भाषा छान्नुहोस्",
@@ -99,12 +101,61 @@
   },
   "login": {
     "title": "ULRMS",
-    "subtitle": "Unified Lab Record Management System",
+    "subtitle": "युनिफाइड ल्याब रेकर्ड व्यवस्थापन प्रणाली",
     "features": {
-      "multiLanguage": "Multi-language Support",
-      "onlineViva": "Online Viva System",
-      "realTimeGrading": "Real-time Grading",
-      "comprehensiveReports": "Comprehensive Reports"
+      "multiLanguage": "बहु-भाषा समर्थन",
+      "onlineViva": "अनलाइन भाइभा प्रणाली",
+      "realTimeGrading": "वास्तविक-समय ग्रेडिङ",
+      "comprehensiveReports": "व्यापक प्रतिवेदनहरू"
     }
+  },
+  "dashboard": {
+    "welcomeBack": "Welcome back, {{name}}!",
+    "labActivities": "Here's what's happening with your lab activities.",
+    "lastUpdated": "Last Updated",
+    "class": "Class",
+    "group": "Group",
+    "assignedPc": "Assigned PC",
+    "noClassGroup": "No class or group assigned yet.",
+    "assignedToMe": "Assigned to Me",
+    "mySubmissions": "My Submissions",
+    "pendingVivas": "Pending Vivas",
+    "avgScore": "Avg. Score",
+    "graded": "graded",
+    "myAssignments": "My Assignments",
+    "pendingGrading": "Pending Grading",
+    "scheduledVivas": "Scheduled Vivas",
+    "completed": "Completed",
+    "totalUsers": "Total Users",
+    "totalClasses": "Total Classes",
+    "assignments": "Assignments",
+    "activeLabs": "Active Labs",
+    "maintenance": "maintenance",
+    "viewAssignments": "View Assignments",
+    "checkPendingWork": "Check pending work",
+    "trackYourWork": "Track your work",
+    "viewGrades": "View Grades",
+    "checkScores": "Check your scores",
+    "reportIssue": "Report Issue",
+    "createAssignment": "Create Assignment",
+    "addNewPractical": "Add new practical",
+    "reviewPending": "Review Pending",
+    "gradeSubmissions": "Grade submissions",
+    "manageClasses": "Manage Classes",
+    "viewStudents": "View students",
+    "shareWithStudents": "Share with students",
+    "manageComputerLabs": "Manage computer labs",
+    "userManagement": "User Management",
+    "manageAllUsers": "Manage all users",
+    "importStudents": "Import Students",
+    "bulkImportCsv": "Bulk import CSV",
+    "upcomingDeadlines": "Upcoming Deadlines",
+    "noUpcomingDeadlines": "No upcoming deadlines",
+    "submitted": "Submitted",
+    "revision": "Revision",
+    "pending": "Pending",
+    "daysLeft": "{{days}}d {{hours}}h left",
+    "hoursLeft": "{{hours}}h left",
+    "dueSoon": "Due soon!"
   }
 }
