--- a/client/public/locales/or/common.json
+++ b/client/public/locales/or/common.json
@@ -60,10 +60,12 @@
     "type": "ପ୍ରକାର",
     "email": "ଇମେଲ",
     "phone": "ଫୋନ",
-    "address": "ଠିକଣା"
+    "address": "ଠିକଣା",
+    "viewAll": "View all",
+    "createTicket": "Create a ticket"
   },
   "auth": {
-    "login": "ଲଗଇନ",
+    "login": "ସାଇନ୍ ଇନ୍",
     "logout": "ଲଗଆଉଟ",
     "email": "ଇମେଲ ଠିକଣା",
     "password": "ପାସୱାର୍ଡ",
@@ -71,23 +73,23 @@
     "forgotPassword": "ପାସୱାର୍ଡ ଭୁଲିଗଲେ?",
     "noAccount": "ଆକାଉଣ୍ଟ ନାହିଁ?",
     "signUp": "ସାଇନ ଅପ",
-    "signingIn": "Signing in...",
-    "welcome": "Welcome back!",
-    "demoCredentials": "Demo Credentials",
-    "firstTimeLogin": "First time? Use PIN",
-    "usePassword": "Use Password",
-    "pin": "6-Digit PIN",
-    "verifyPin": "Verify PIN",
-    "setPassword": "Set Password",
-    "confirmPassword": "Confirm Password",
-    "verifying": "Verifying...",
-    "settingUp": "Setting up...",
-    "setPasswordLogin": "Set Password & Login",
-    "enterPinFromTeacher": "Enter PIN from your teacher",
-    "academicSession": "Academic Session",
-    "noSessions": "No sessions",
-    "current": "Current",
-    "pinVerified": "PIN verified! Set your password."
+    "signingIn": "ସାଇନ୍ ଇନ୍ ହେଉଛି...",
+    "welcome": "ପୁଣି ସ୍ୱାଗତ!",
+    "demoCredentials": "ଡେମୋ କ୍ରେଡେନସିଆଲ୍",
+    "firstTimeLogin": "ପ୍ରଥମ ଥର? PIN ବ୍ୟବହାର କରନ୍ତୁ",
+    "usePassword": "ପାସୱାର୍ଡ ବ୍ୟବହାର କରନ୍ତୁ",
+    "pin": "6-ଅଙ୍କ PIN",
+    "verifyPin": "PIN ଯାଞ୍ଚ କରନ୍ତୁ",
+    "setPassword": "ପାସୱାର୍ଡ ସେଟ କରନ୍ତୁ",
+    "confirmPassword": "ପାସୱାର୍ଡ ନିଶ୍ଚିତ କରନ୍ତୁ",
+    "verifying": "ଯାଞ୍ଚ ହେଉଛି...",
+    "settingUp": "ସେଟ ଅପ ହେଉଛି...",
+    "setPasswordLogin": "ପାସୱାର୍ଡ ସେଟ କରନ୍ତୁ ଏବଂ ଲଗଇନ କରନ୍ତୁ",
+    "enterPinFromTeacher": "ଶିକ୍ଷକଙ୍କଠାରୁ ପ୍ରାପ୍ତ PIN ଦିଅନ୍ତୁ",
+    "academicSession": "ଶିକ୍ଷାବର୍ଷ",
+    "noSessions": "କୌଣସି ସେସନ ନାହିଁ",
+    "current": "ବର୍ତ୍ତମାନ",
+    "pinVerified": "PIN ଯାଞ୍ଚ ହୋଇଗଲା! ଆପଣଙ୍କ ପାସୱାର୍ଡ ସେଟ କରନ୍ତୁ।"
   },
   "language": {
     "selectLanguage": "ଭାଷା ବାଛନ୍ତୁ",
@@ -99,12 +101,61 @@
   },
   "login": {
     "title": "ULRMS",
-    "subtitle": "Unified Lab Record Management System",
+    "subtitle": "ୟୁନିଫାଇଡ ଲ୍ୟାବ ରେକର୍ଡ ମ୍ୟାନେଜମେଣ୍ଟ ସିଷ୍ଟମ",
     "features": {
-      "multiLanguage": "Multi-language Support",
-      "onlineViva": "Online Viva System",
-      "realTimeGrading": "Real-time Grading",
-      "comprehensiveReports": "Comprehensive Reports"
+      "multiLanguage": "ବହୁ-ଭାଷା ସମର୍ଥନ",
+      "onlineViva": "ଅନଲାଇନ ଭାଇଭା ସିଷ୍ଟମ",
+      "realTimeGrading": "ରିଅଲ-ଟାଇମ ଗ୍ରେଡିଂ",
+      "comprehensiveReports": "ବିସ୍ତୃତ ରିପୋର୍ଟ"
     }
+  },
+  "dashboard": {
+    "welcomeBack": "Welcome back, {{name}}!",
+    "labActivities": "Here's what's happening with your lab activities.",
+    "lastUpdated": "Last Updated",
+    "class": "Class",
+    "group": "Group",
+    "assignedPc": "Assigned PC",
+    "noClassGroup": "No class or group assigned yet.",
+    "assignedToMe": "Assigned to Me",
+    "mySubmissions": "My Submissions",
+    "pendingVivas": "Pending Vivas",
+    "avgScore": "Avg. Score",
+    "graded": "graded",
+    "myAssignments": "My Assignments",
+    "pendingGrading": "Pending Grading",
+    "scheduledVivas": "Scheduled Vivas",
+    "completed": "Completed",
+    "totalUsers": "Total Users",
+    "totalClasses": "Total Classes",
+    "assignments": "Assignments",
+    "activeLabs": "Active Labs",
+    "maintenance": "maintenance",
+    "viewAssignments": "View Assignments",
+    "checkPendingWork": "Check pending work",
+    "trackYourWork": "Track your work",
+    "viewGrades": "View Grades",
+    "checkScores": "Check your scores",
+    "reportIssue": "Report Issue",
+    "createAssignment": "Create Assignment",
+    "addNewPractical": "Add new practical",
+    "reviewPending": "Review Pending",
+    "gradeSubmissions": "Grade submissions",
+    "manageClasses": "Manage Classes",
+    "viewStudents": "View students",
+    "shareWithStudents": "Share with students",
+    "manageComputerLabs": "Manage computer labs",
+    "userManagement": "User Management",
+    "manageAllUsers": "Manage all users",
+    "importStudents": "Import Students",
+    "bulkImportCsv": "Bulk import CSV",
+    "upcomingDeadlines": "Upcoming Deadlines",
+    "noUpcomingDeadlines": "No upcoming deadlines",
+    "submitted": "Submitted",
+    "revision": "Revision",
+    "pending": "Pending",
+    "daysLeft": "{{days}}d {{hours}}h left",
+    "hoursLeft": "{{hours}}h left",
+    "dueSoon": "Due soon!"
   }
 }
