--- a/client/public/locales/pa/common.json
+++ b/client/public/locales/pa/common.json
@@ -60,10 +60,12 @@
     "type": "ਕਿਸਮ",
     "email": "ਈਮੇਲ",
     "phone": "ਫ਼ੋਨ",
-    "address": "ਪਤਾ"
+    "address": "ਪਤਾ",
+    "viewAll": "View all",
+    "createTicket": "Create a ticket"
   },
   "auth": {
-    "login": "ਲੌਗ ਇਨ",
+    "login": "ਸਾਈਨ ਇਨ",
     "logout": "ਲੌਗ ਆਊਟ",
     "email": "ਈਮੇਲ ਪਤਾ",
     "password": "ਪਾਸਵਰਡ",
@@ -71,23 +73,23 @@
     "forgotPassword": "ਪਾਸਵਰਡ ਭੁੱਲ ਗਏ?",
     "noAccount": "ਖਾਤਾ ਨਹੀਂ?",
     "signUp": "ਸਾਈਨ ਅੱਪ",
-    "signingIn": "Signing in...",
-    "welcome": "Welcome back!",
-    "demoCredentials": "Demo Credentials",
-    "firstTimeLogin": "First time? Use PIN",
-    "usePassword": "Use Password",
-    "pin": "6-Digit PIN",
-    "verifyPin": "Verify PIN",
-    "setPassword": "Set Password",
-    "confirmPassword": "Confirm Password",
-    "verifying": "Verifying...",
-    "settingUp": "Setting up...",
-    "setPasswordLogin": "Set Password & Login",
-    "enterPinFromTeacher": "Enter PIN from your teacher",
-    "academicSession": "Academic Session",
-    "noSessions": "No sessions",
-    "current": "Current",
-    "pinVerified": "PIN verified! Set your password."
+    "signingIn": "ਸਾਈਨ ਇਨ ਹੋ ਰਿਹਾ ਹੈ...",
+    "welcome": "ਵਾਪਸੀ 'ਤੇ ਸੁਆਗਤ!",
+    "demoCredentials": "ਡੈਮੋ ਕ੍ਰੇਡੇਨਸ਼ੀਅਲ",
+    "firstTimeLogin": "ਪਹਿਲੀ ਵਾਰ? PIN ਵਰਤੋ",
+    "usePassword": "ਪਾਸਵਰਡ ਵਰਤੋ",
+    "pin": "6-ਅੰਕੀ PIN",
+    "verifyPin": "PIN ਤਸਦੀਕ ਕਰੋ",
+    "setPassword": "ਪਾਸਵਰਡ ਸੈੱਟ ਕਰੋ",
+    "confirmPassword": "ਪਾਸਵਰਡ ਪੁਸ਼ਟੀ ਕਰੋ",
+    "verifying": "ਤਸਦੀਕ ਹੋ ਰਿਹਾ ਹੈ...",
+    "settingUp": "ਸੈੱਟ ਅਪ ਹੋ ਰਿਹਾ ਹੈ...",
+    "setPasswordLogin": "ਪਾਸਵਰਡ ਸੈੱਟ ਕਰੋ ਅਤੇ ਲੌਗਇਨ ਕਰੋ",
+    "enterPinFromTeacher": "ਅਧਿਆਪਕ ਤੋਂ ਮਿਲੀ PIN ਦਰਜ ਕਰੋ",
+    "academicSession": "ਅਕਾਦਮਿਕ ਸੈਸ਼ਨ",
+    "noSessions": "ਕੋਈ ਸੈਸ਼ਨ ਨਹੀਂ",
+    "current": "ਮੌਜੂਦਾ",
+    "pinVerified": "PIN ਤਸਦੀਕ ਹੋ ਗਈ! ਆਪਣਾ ਪਾਸਵਰਡ ਸੈੱਟ ਕਰੋ।"
   },
   "language": {
     "selectLanguage": "ਭਾਸ਼ਾ ਚੁਣੋ",
@@ -99,12 +101,61 @@
   },
   "login": {
     "title": "ULRMS",
-    "subtitle": "Unified Lab Record Management System",
+    "subtitle": "ਯੂਨੀਫਾਈਡ ਲੈਬ ਰਿਕਾਰਡ ਮੈਨੇਜਮੈਂਟ ਸਿਸਟਮ",
     "features": {
-      "multiLanguage": "Multi-language Support",
-      "onlineViva": "Online Viva System",
-      "realTimeGrading": "Real-time Grading",
-      "comprehensiveReports": "Comprehensive Reports"
+      "multiLanguage": "ਬਹੁ-ਭਾਸ਼ਾ ਸਹਾਇਤਾ",
+      "onlineViva": "ਔਨਲਾਈਨ ਵਾਈਵਾ ਸਿਸਟਮ",
+      "realTimeGrading": "ਰੀਅਲ-ਟਾਈਮ ਗ੍ਰੇਡਿੰਗ",
+      "comprehensiveReports": "ਵਿਆਪਕ ਰਿਪੋਰਟਾਂ"
     }
+  },
+  "dashboard": {
+    "welcomeBack": "Welcome back, {{name}}!",
+    "labActivities": "Here's what's happening with your lab activities.",
+    "lastUpdated": "Last Updated",
+    "class": "Class",
+    "group": "Group",
+    "assignedPc": "Assigned PC",
+    "noClassGroup": "No class or group assigned yet.",
+    "assignedToMe": "Assigned to Me",
+    "mySubmissions": "My Submissions",
+    "pendingVivas": "Pending Vivas",
+    "avgScore": "Avg. Score",
+    "graded": "graded",
+    "myAssignments": "My Assignments",
+    "pendingGrading": "Pending Grading",
+    "scheduledVivas": "Scheduled Vivas",
+    "completed": "Completed",
+    "totalUsers": "Total Users",
+    "totalClasses": "Total Classes",
+    "assignments": "Assignments",
+    "activeLabs": "Active Labs",
+    "maintenance": "maintenance",
+    "viewAssignments": "View Assignments",
+    "checkPendingWork": "Check pending work",
+    "trackYourWork": "Track your work",
+    "viewGrades": "View Grades",
+    "checkScores": "Check your scores",
+    "reportIssue": "Report Issue",
+    "createAssignment": "Create Assignment",
+    "addNewPractical": "Add new practical",
+    "reviewPending": "Review Pending",
+    "gradeSubmissions": "Grade submissions",
+    "manageClasses": "Manage Classes",
+    "viewStudents": "View students",
+    "shareWithStudents": "Share with students",
+    "manageComputerLabs": "Manage computer labs",
+    "userManagement": "User Management",
+    "manageAllUsers": "Manage all users",
+    "importStudents": "Import Students",
+    "bulkImportCsv": "Bulk import CSV",
+    "upcomingDeadlines": "Upcoming Deadlines",
+    "noUpcomingDeadlines": "No upcoming deadlines",
+    "submitted": "Submitted",
+    "revision": "Revision",
+    "pending": "Pending",
+    "daysLeft": "{{days}}d {{hours}}h left",
+    "hoursLeft": "{{hours}}h left",
+    "dueSoon": "Due soon!"
   }
 }
