--- a/client/public/locales/sa/common.json
+++ b/client/public/locales/sa/common.json
@@ -60,7 +60,9 @@
     "type": "प्रकारः",
     "email": "विद्युत्पत्रम्",
     "phone": "दूरवाणी",
-    "address": "पता"
+    "address": "पता",
+    "viewAll": "View all",
+    "createTicket": "Create a ticket"
   },
   "auth": {
     "login": "प्रवेशः",
@@ -71,23 +73,23 @@
     "forgotPassword": "गुप्तशब्दं विस्मृतम्?",
     "noAccount": "खातं नास्ति?",
     "signUp": "पञ्जीकरणम्",
-    "signingIn": "Signing in...",
-    "welcome": "Welcome back!",
-    "demoCredentials": "Demo Credentials",
-    "firstTimeLogin": "First time? Use PIN",
-    "usePassword": "Use Password",
-    "pin": "6-Digit PIN",
-    "verifyPin": "Verify PIN",
-    "setPassword": "Set Password",
-    "confirmPassword": "Confirm Password",
-    "verifying": "Verifying...",
-    "settingUp": "Setting up...",
-    "setPasswordLogin": "Set Password & Login",
-    "enterPinFromTeacher": "Enter PIN from your teacher",
-    "academicSession": "Academic Session",
-    "noSessions": "No sessions",
-    "current": "Current",
-    "pinVerified": "PIN verified! Set your password."
+    "signingIn": "प्रविश्यते...",
+    "welcome": "पुनः स्वागतम्!",
+    "demoCredentials": "प्रदर्शन प्रमाणपत्राणि",
+    "firstTimeLogin": "प्रथमवारम्? PIN उपयुज्यताम्",
+    "usePassword": "गुप्तशब्दं प्रयोजयतु",
+    "pin": "6-अङ्कीय PIN",
+    "verifyPin": "PIN सत्यापयतु",
+    "setPassword": "गुप्तशब्दं स्थापयतु",
+    "confirmPassword": "गुप्तशब्दं पुष्टीकरोतु",
+    "verifying": "सत्यापयति...",
+    "settingUp": "स्थापयति...",
+    "setPasswordLogin": "गुप्तशब्दं स्थापयतु प्रविशतु च",
+    "enterPinFromTeacher": "आचार्यात् प्राप्तं PIN ददातु",
+    "academicSession": "शैक्षिकसत्रम्",
+    "noSessions": "सत्राणि नसन्ति",
+    "current": "वर्तमानम्",
+    "pinVerified": "PIN सत्यापितम्! भवतः गुप्तशब्दं स्थापयतु।"
   },
   "language": {
     "selectLanguage": "भाषां चिनोतु",
@@ -99,12 +101,61 @@
   },
   "login": {
     "title": "ULRMS",
-    "subtitle": "Unified Lab Record Management System",
+    "subtitle": "एकीकृत प्रयोगशाला अभिलेख प्रबन्धन प्रणाली",
     "features": {
-      "multiLanguage": "Multi-language Support",
-      "onlineViva": "Online Viva System",
-      "realTimeGrading": "Real-time Grading",
-      "comprehensiveReports": "Comprehensive Reports"
+      "multiLanguage": "बहुभाषा समर्थनम्",
+      "onlineViva": "अन्तर्जाल मौखिक प्रणाली",
+      "realTimeGrading": "तत्काल श्रेणीकरणम्",
+      "comprehensiveReports": "विस्तृत प्रतिवेदनानि"
     }
+  },
+  "dashboard": {
+    "welcomeBack": "Welcome back, {{name}}!",
+    "labActivities": "Here's what's happening with your lab activities.",
+    "lastUpdated": "Last Updated",
+    "class": "Class",
+    "group": "Group",
+    "assignedPc": "Assigned PC",
+    "noClassGroup": "No class or group assigned yet.",
+    "assignedToMe": "Assigned to Me",
+    "mySubmissions": "My Submissions",
+    "pendingVivas": "Pending Vivas",
+    "avgScore": "Avg. Score",
+    "graded": "graded",
+    "myAssignments": "My Assignments",
+    "pendingGrading": "Pending Grading",
+    "scheduledVivas": "Scheduled Vivas",
+    "completed": "Completed",
+    "totalUsers": "Total Users",
+    "totalClasses": "Total Classes",
+    "assignments": "Assignments",
+    "activeLabs": "Active Labs",
+    "maintenance": "maintenance",
+    "viewAssignments": "View Assignments",
+    "checkPendingWork": "Check pending work",
+    "trackYourWork": "Track your work",
+    "viewGrades": "View Grades",
+    "checkScores": "Check your scores",
+    "reportIssue": "Report Issue",
+    "createAssignment": "Create Assignment",
+    "addNewPractical": "Add new practical",
+    "reviewPending": "Review Pending",
+    "gradeSubmissions": "Grade submissions",
+    "manageClasses": "Manage Classes",
+    "viewStudents": "View students",
+    "shareWithStudents": "Share with students",
+    "manageComputerLabs": "Manage computer labs",
+    "userManagement": "User Management",
+    "manageAllUsers": "Manage all users",
+    "importStudents": "Import Students",
+    "bulkImportCsv": "Bulk import CSV",
+    "upcomingDeadlines": "Upcoming Deadlines",
+    "noUpcomingDeadlines": "No upcoming deadlines",
+    "submitted": "Submitted",
+    "revision": "Revision",
+    "pending": "Pending",
+    "daysLeft": "{{days}}d {{hours}}h left",
+    "hoursLeft": "{{hours}}h left",
+    "dueSoon": "Due soon!"
   }
 }
