--- a/client/public/locales/ta/common.json
+++ b/client/public/locales/ta/common.json
@@ -60,7 +60,9 @@
     "type": "வகை",
     "email": "மின்னஞ்சல்",
     "phone": "தொலைபேசி",
-    "address": "முகவரி"
+    "address": "முகவரி",
+    "viewAll": "View all",
+    "createTicket": "Create a ticket"
   },
   "auth": {
     "login": "உள்நுழை",
@@ -71,23 +73,23 @@
     "forgotPassword": "கடவுச்சொல்லை மறந்துவிட்டீர்களா?",
     "noAccount": "கணக்கு இல்லையா?",
     "signUp": "பதிவு செய்",
-    "signingIn": "Signing in...",
-    "welcome": "Welcome back!",
-    "demoCredentials": "Demo Credentials",
-    "firstTimeLogin": "First time? Use PIN",
-    "usePassword": "Use Password",
-    "pin": "6-Digit PIN",
-    "verifyPin": "Verify PIN",
-    "setPassword": "Set Password",
-    "confirmPassword": "Confirm Password",
-    "verifying": "Verifying...",
-    "settingUp": "Setting up...",
-    "setPasswordLogin": "Set Password & Login",
-    "enterPinFromTeacher": "Enter PIN from your teacher",
-    "academicSession": "Academic Session",
-    "noSessions": "No sessions",
-    "current": "Current",
-    "pinVerified": "PIN verified! Set your password."
+    "signingIn": "உள்நுழைகிறது...",
+    "welcome": "மீண்டும் வரவேற்கிறோம்!",
+    "demoCredentials": "டெமோ நற்சான்றிதழ்கள்",
+    "firstTimeLogin": "முதல் முறையா? PIN பயன்படுத்தவும்",
+    "usePassword": "கடவுச்சொல் பயன்படுத்தவும்",
+    "pin": "6-இலக்க PIN",
+    "verifyPin": "PIN சரிபார்க்கவும்",
+    "setPassword": "கடவுச்சொல் அமைக்கவும்",
+    "confirmPassword": "கடவுச்சொல் உறுதிப்படுத்தவும்",
+    "verifying": "சரிபார்க்கிறது...",
+    "settingUp": "அமைக்கிறது...",
+    "setPasswordLogin": "கடவுச்சொல் அமைத்து உள்நுழையவும்",
+    "enterPinFromTeacher": "ஆசிரியரிடமிருந்து பெற்ற PIN உள்ளிடவும்",
+    "academicSession": "கல்வி அமர்வு",
+    "noSessions": "அமர்வுகள் இல்லை",
+    "current": "தற்போதைய",
+    "pinVerified": "PIN சரிபார்க்கப்பட்டது! உங்கள் கடவுச்சொல்லை அமைக்கவும்."
   },
   "language": {
     "selectLanguage": "மொழியை தேர்வு செய்",
@@ -99,12 +101,61 @@
   },
   "login": {
     "title": "ULRMS",
-    "subtitle": "Unified Lab Record Management System",
+    "subtitle": "யூனிஃபைட் லேப் ரெக்கார்ட் மேனேஜ்மென்ட் சிஸ்டம்",
     "features": {
-      "multiLanguage": "Multi-language Support",
-      "onlineViva": "Online Viva System",
-      "realTimeGrading": "Real-time Grading",
-      "comprehensiveReports": "Comprehensive Reports"
+      "multiLanguage": "பல-மொழி ஆதரவு",
+      "onlineViva": "ஆன்லைன் வைவா சிஸ்டம்",
+      "realTimeGrading": "நிகழ்நேர தரமிடல்",
+      "comprehensiveReports": "முழுமையான அறிக்கைகள்"
     }
+  },
+  "dashboard": {
+    "welcomeBack": "Welcome back, {{name}}!",
+    "labActivities": "Here's what's happening with your lab activities.",
+    "lastUpdated": "Last Updated",
+    "class": "Class",
+    "group": "Group",
+    "assignedPc": "Assigned PC",
+    "noClassGroup": "No class or group assigned yet.",
+    "assignedToMe": "Assigned to Me",
+    "mySubmissions": "My Submissions",
+    "pendingVivas": "Pending Vivas",
+    "avgScore": "Avg. Score",
+    "graded": "graded",
+    "myAssignments": "My Assignments",
+    "pendingGrading": "Pending Grading",
+    "scheduledVivas": "Scheduled Vivas",
+    "completed": "Completed",
+    "totalUsers": "Total Users",
+    "totalClasses": "Total Classes",
+    "assignments": "Assignments",
+    "activeLabs": "Active Labs",
+    "maintenance": "maintenance",
+    "viewAssignments": "View Assignments",
+    "checkPendingWork": "Check pending work",
+    "trackYourWork": "Track your work",
+    "viewGrades": "View Grades",
+    "checkScores": "Check your scores",
+    "reportIssue": "Report Issue",
+    "createAssignment": "Create Assignment",
+    "addNewPractical": "Add new practical",
+    "reviewPending": "Review Pending",
+    "gradeSubmissions": "Grade submissions",
+    "manageClasses": "Manage Classes",
+    "viewStudents": "View students",
+    "shareWithStudents": "Share with students",
+    "manageComputerLabs": "Manage computer labs",
+    "userManagement": "User Management",
+    "manageAllUsers": "Manage all users",
+    "importStudents": "Import Students",
+    "bulkImportCsv": "Bulk import CSV",
+    "upcomingDeadlines": "Upcoming Deadlines",
+    "noUpcomingDeadlines": "No upcoming deadlines",
+    "submitted": "Submitted",
+    "revision": "Revision",
+    "pending": "Pending",
+    "daysLeft": "{{days}}d {{hours}}h left",
+    "hoursLeft": "{{hours}}h left",
+    "dueSoon": "Due soon!"
   }
 }
