--- a/client/public/locales/te/common.json
+++ b/client/public/locales/te/common.json
@@ -60,10 +60,12 @@
     "type": "రకం",
     "email": "ఇమెయిల్",
     "phone": "ఫోన్",
-    "address": "చిరునామా"
+    "address": "చిరునామా",
+    "viewAll": "View all",
+    "createTicket": "Create a ticket"
   },
   "auth": {
-    "login": "లాగిన్",
+    "login": "సైన్ ఇన్",
     "logout": "లాగ్‌అవుట్",
     "email": "ఇమెయిల్ చిరునామా",
     "password": "పాస్‌వర్డ్",
@@ -71,23 +73,23 @@
     "forgotPassword": "పాస్‌వర్డ్ మర్చిపోయారా?",
     "noAccount": "ఖాతా లేదా?",
     "signUp": "సైన్ అప్",
-    "signingIn": "Signing in...",
-    "welcome": "Welcome back!",
-    "demoCredentials": "Demo Credentials",
-    "firstTimeLogin": "First time? Use PIN",
-    "usePassword": "Use Password",
-    "pin": "6-Digit PIN",
-    "verifyPin": "Verify PIN",
-    "setPassword": "Set Password",
-    "confirmPassword": "Confirm Password",
-    "verifying": "Verifying...",
-    "settingUp": "Setting up...",
-    "setPasswordLogin": "Set Password & Login",
-    "enterPinFromTeacher": "Enter PIN from your teacher",
-    "academicSession": "Academic Session",
-    "noSessions": "No sessions",
-    "current": "Current",
-    "pinVerified": "PIN verified! Set your password."
+    "signingIn": "సైన్ ఇన్ అవుతోంది...",
+    "welcome": "తిరిగి స్వాగతం!",
+    "demoCredentials": "డెమో క్రెడెన్షియల్స్",
+    "firstTimeLogin": "మొదటిసారా? PINని ఉపయోగించండి",
+    "usePassword": "పాస్‌వర్డ్ ఉపయోగించండి",
+    "pin": "6-అంకెల PIN",
+    "verifyPin": "PIN ధృవీకరించండి",
+    "setPassword": "పాస్‌వర్డ్ సెట్ చేయండి",
+    "confirmPassword": "పాస్‌వర్డ్ నిర్ధారించండి",
+    "verifying": "ధృవీకరిస్తోంది...",
+    "settingUp": "సెట్ అప్ అవుతోంది...",
+    "setPasswordLogin": "పాస్‌వర్డ్ సెట్ చేసి లాగిన్ అవండి",
+    "enterPinFromTeacher": "టీచర్ నుండి పొందిన PIN ఎంటర్ చేయండి",
+    "academicSession": "అకడమిక్ సెషన్",
+    "noSessions": "సెషన్‌లు లేవు",
+    "current": "ప్రస్తుత",
+    "pinVerified": "PIN ధృవీకరించబడింది! మీ పాస్‌వర్డ్ సెట్ చేయండి."
   },
   "language": {
     "selectLanguage": "భాషను ఎంచుకోండి",
@@ -99,12 +101,61 @@
   },
   "login": {
     "title": "ULRMS",
-    "subtitle": "Unified Lab Record Management System",
+    "subtitle": "యూనిఫైడ్ ల్యాబ్ రికార్డ్ మేనేజ్‌మెంట్ సిస్టమ్",
     "features": {
-      "multiLanguage": "Multi-language Support",
-      "onlineViva": "Online Viva System",
-      "realTimeGrading": "Real-time Grading",
-      "comprehensiveReports": "Comprehensive Reports"
+      "multiLanguage": "బహుళ-భాషా మద్దతు",
+      "onlineViva": "ఆన్‌లైన్ వైవా సిస్టమ్",
+      "realTimeGrading": "రియల్-టైమ్ గ్రేడింగ్",
+      "comprehensiveReports": "సమగ్ర నివేదికలు"
     }
+  },
+  "dashboard": {
+    "welcomeBack": "Welcome back, {{name}}!",
+    "labActivities": "Here's what's happening with your lab activities.",
+    "lastUpdated": "Last Updated",
+    "class": "Class",
+    "group": "Group",
+    "assignedPc": "Assigned PC",
+    "noClassGroup": "No class or group assigned yet.",
+    "assignedToMe": "Assigned to Me",
+    "mySubmissions": "My Submissions",
+    "pendingVivas": "Pending Vivas",
+    "avgScore": "Avg. Score",
+    "graded": "graded",
+    "myAssignments": "My Assignments",
+    "pendingGrading": "Pending Grading",
+    "scheduledVivas": "Scheduled Vivas",
+    "completed": "Completed",
+    "totalUsers": "Total Users",
+    "totalClasses": "Total Classes",
+    "assignments": "Assignments",
+    "activeLabs": "Active Labs",
+    "maintenance": "maintenance",
+    "viewAssignments": "View Assignments",
+    "checkPendingWork": "Check pending work",
+    "trackYourWork": "Track your work",
+    "viewGrades": "View Grades",
+    "checkScores": "Check your scores",
+    "reportIssue": "Report Issue",
+    "createAssignment": "Create Assignment",
+    "addNewPractical": "Add new practical",
+    "reviewPending": "Review Pending",
+    "gradeSubmissions": "Grade submissions",
+    "manageClasses": "Manage Classes",
+    "viewStudents": "View students",
+    "shareWithStudents": "Share with students",
+    "manageComputerLabs": "Manage computer labs",
+    "userManagement": "User Management",
+    "manageAllUsers": "Manage all users",
+    "importStudents": "Import Students",
+    "bulkImportCsv": "Bulk import CSV",
+    "upcomingDeadlines": "Upcoming Deadlines",
+    "noUpcomingDeadlines": "No upcoming deadlines",
+    "submitted": "Submitted",
+    "revision": "Revision",
+    "pending": "Pending",
+    "daysLeft": "{{days}}d {{hours}}h left",
+    "hoursLeft": "{{hours}}h left",
+    "dueSoon": "Due soon!"
   }
 }
