--- a/client/public/locales/ur/common.json
+++ b/client/public/locales/ur/common.json
@@ -60,10 +60,12 @@
     "type": "قسم",
     "email": "ای میل",
     "phone": "فون",
-    "address": "پتہ"
+    "address": "پتہ",
+    "viewAll": "View all",
+    "createTicket": "Create a ticket"
   },
   "auth": {
-    "login": "لاگ ان",
+    "login": "سائن ان",
     "logout": "لاگ آؤٹ",
     "email": "ای میل پتہ",
     "password": "پاس ورڈ",
@@ -71,23 +73,23 @@
     "forgotPassword": "پاس ورڈ بھول گئے؟",
     "noAccount": "اکاؤنٹ نہیں ہے؟",
     "signUp": "سائن اپ",
-    "signingIn": "Signing in...",
-    "welcome": "Welcome back!",
-    "demoCredentials": "Demo Credentials",
-    "firstTimeLogin": "First time? Use PIN",
-    "usePassword": "Use Password",
-    "pin": "6-Digit PIN",
-    "verifyPin": "Verify PIN",
-    "setPassword": "Set Password",
-    "confirmPassword": "Confirm Password",
-    "verifying": "Verifying...",
-    "settingUp": "Setting up...",
-    "setPasswordLogin": "Set Password & Login",
-    "enterPinFromTeacher": "Enter PIN from your teacher",
-    "academicSession": "Academic Session",
-    "noSessions": "No sessions",
-    "current": "Current",
-    "pinVerified": "PIN verified! Set your password."
+    "signingIn": "سائن ان ہو رہا ہے...",
+    "welcome": "واپسی پر خوش آمدید!",
+    "demoCredentials": "ڈیمو اسناد",
+    "firstTimeLogin": "پہلی بار؟ PIN استعمال کریں",
+    "usePassword": "پاس ورڈ استعمال کریں",
+    "pin": "6-ہندسوں کا PIN",
+    "verifyPin": "PIN تصدیق کریں",
+    "setPassword": "پاس ورڈ سیٹ کریں",
+    "confirmPassword": "پاس ورڈ کی تصدیق کریں",
+    "verifying": "تصدیق ہو رہی ہے...",
+    "settingUp": "سیٹ اپ ہو رہا ہے...",
+    "setPasswordLogin": "پاس ورڈ سیٹ کریں اور لاگ ان کریں",
+    "enterPinFromTeacher": "استاد سے ملا PIN درج کریں",
+    "academicSession": "تعلیمی سیشن",
+    "noSessions": "کوئی سیشن نہیں",
+    "current": "موجودہ",
+    "pinVerified": "PIN تصدیق ہو گئی! اپنا پاس ورڈ سیٹ کریں۔"
   },
   "language": {
     "selectLanguage": "زبان منتخب کریں",
@@ -99,12 +101,61 @@
   },
   "login": {
     "title": "ULRMS",
-    "subtitle": "Unified Lab Record Management System",
+    "subtitle": "یونیفائیڈ لیب ریکارڈ مینجمنٹ سسٹم",
     "features": {
-      "multiLanguage": "Multi-language Support",
-      "onlineViva": "Online Viva System",
-      "realTimeGrading": "Real-time Grading",
-      "comprehensiveReports": "Comprehensive Reports"
+      "multiLanguage": "کثیر لسانی معاونت",
+      "onlineViva": "آن لائن وائیوا سسٹم",
+      "realTimeGrading": "ریئل ٹائم گریڈنگ",
+      "comprehensiveReports": "جامع رپورٹس"
     }
+  },
+  "dashboard": {
+    "welcomeBack": "Welcome back, {{name}}!",
+    "labActivities": "Here's what's happening with your lab activities.",
+    "lastUpdated": "Last Updated",
+    "class": "Class",
+    "group": "Group",
+    "assignedPc": "Assigned PC",
+    "noClassGroup": "No class or group assigned yet.",
+    "assignedToMe": "Assigned to Me",
+    "mySubmissions": "My Submissions",
+    "pendingVivas": "Pending Vivas",
+    "avgScore": "Avg. Score",
+    "graded": "graded",
+    "myAssignments": "My Assignments",
+    "pendingGrading": "Pending Grading",
+    "scheduledVivas": "Scheduled Vivas",
+    "completed": "Completed",
+    "totalUsers": "Total Users",
+    "totalClasses": "Total Classes",
+    "assignments": "Assignments",
+    "activeLabs": "Active Labs",
+    "maintenance": "maintenance",
+    "viewAssignments": "View Assignments",
+    "checkPendingWork": "Check pending work",
+    "trackYourWork": "Track your work",
+    "viewGrades": "View Grades",
+    "checkScores": "Check your scores",
+    "reportIssue": "Report Issue",
+    "createAssignment": "Create Assignment",
+    "addNewPractical": "Add new practical",
+    "reviewPending": "Review Pending",
+    "gradeSubmissions": "Grade submissions",
+    "manageClasses": "Manage Classes",
+    "viewStudents": "View students",
+    "shareWithStudents": "Share with students",
+    "manageComputerLabs": "Manage computer labs",
+    "userManagement": "User Management",
+    "manageAllUsers": "Manage all users",
+    "importStudents": "Import Students",
+    "bulkImportCsv": "Bulk import CSV",
+    "upcomingDeadlines": "Upcoming Deadlines",
+    "noUpcomingDeadlines": "No upcoming deadlines",
+    "submitted": "Submitted",
+    "revision": "Revision",
+    "pending": "Pending",
+    "daysLeft": "{{days}}d {{hours}}h left",
+    "hoursLeft": "{{hours}}h left",
+    "dueSoon": "Due soon!"
   }
 }
