--- a/client/public/locales/en/common.json
+++ b/client/public/locales/en/common.json
@@ -60,7 +60,9 @@
         "type": "Type",
         "email": "Email",
         "phone": "Phone",
-        "address": "Address"
+        "address": "Address",
+        "viewAll": "View all",
+        "createTicket": "Create a ticket"
     },
     "auth": {
         "login": "Sign In",
@@ -106,5 +108,55 @@
             "realTimeGrading": "Real-time Grading",
             "comprehensiveReports": "Comprehensive Reports"
         }
+    },
+    "dashboard": {
+        "welcomeBack": "Welcome back, {{name}}!",
+        "labActivities": "Here's what's happening with your lab activities.",
+        "lastUpdated": "Last Updated",
+        "class": "Class",
+        "group": "Group",
+        "assignedPc": "Assigned PC",
+        "noClassGroup": "No class or group assigned yet.",
+        "assignedToMe": "Assigned to Me",
+        "mySubmissions": "My Submissions",
+        "pendingVivas": "Pending Vivas",
+        "avgScore": "Avg. Score",
+        "graded": "graded",
+        "myAssignments": "My Assignments",
+        "pendingGrading": "Pending Grading",
+        "scheduledVivas": "Scheduled Vivas",
+        "completed": "Completed",
+        "totalUsers": "Total Users",
+        "totalClasses": "Total Classes",
+        "assignments": "Assignments",
+        "activeLabs": "Active Labs",
+        "maintenance": "maintenance",
+        "viewAssignments": "View Assignments",
+        "checkPendingWork": "Check pending work",
+        "trackYourWork": "Track your work",
+        "viewGrades": "View Grades",
+        "checkScores": "Check your scores",
+        "reportIssue": "Report Issue",
+        "createAssignment": "Create Assignment",
+        "addNewPractical": "Add new practical",
+        "reviewPending": "Review Pending",
+        "gradeSubmissions": "Grade submissions",
+        "manageClasses": "Manage Classes",
+        "viewStudents": "View students",
+        "shareWithStudents": "Share with students",
+        "manageComputerLabs": "Manage computer labs",
+        "userManagement": "User Management",
+        "manageAllUsers": "Manage all users",
+        "importStudents": "Import Students",
+        "bulkImportCsv": "Bulk import CSV",
+        "upcomingDeadlines": "Upcoming Deadlines",
+        "noUpcomingDeadlines": "No upcoming deadlines",
+        "graded": "Graded",
+        "submitted": "Submitted",
+        "revision": "Revision",
+        "pending": "Pending",
+        "daysLeft": "{{days}}d {{hours}}h left",
+        "hoursLeft": "{{hours}}h left",
+        "dueSoon": "Due soon!"
     }
 }
